criando todas as dashs

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
 
     <!-- Apply the rounded design throughout the Angular Material library -->
     <body class="fuse-mat-rounded">
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
         <!-- Splash screen -->
         <fuse-splash-screen>
